tempfile/async-stream/tests/ui/yield_bad_expr_in_macro.stderr
error: expected an expression
 --> tests/ui/yield_bad_expr_in_macro.rs:8:33
  |
8 |             _ = work() => yield fn f() {},
  |                                 ^^
