tempfile/async-stream/tests/ui/yield_bad_expr_in_macro.rs
use async_stream::stream;

fn main() {
    async fn work() {}

    stream! {
        tokio::select! {
            _ = work() => yield fn f() {},
        }
    };
}
